--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Domain Extractor - Extract domains from URLs and emails</title>
         <meta name="description" content="Free domain extractor to quickly get domains from any list of URLs or emails. Works online, bulk paste supported.">
+        <meta name="msvalidate.01" content="29B8F11D4C1B502C4AE131B6995697F9" />
         <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='35' cy='35' r='20' fill='none' stroke='%23334155' stroke-width='6'/%3E%3Cpath d='m50 50 20 20' stroke='%23334155' stroke-width='6' stroke-linecap='round'/%3E%3C/svg%3E" />
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
